--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                     <div class="card">
                         <div class="card-info">
                             <div class="card-avatar">
-                                <img src="img/20230127_160450.jpg" alt="">
+                                <img src="" alt="">
                             </div>
-                            <div class="card-title">Ibrahim badwan</div>
-                            <div class="card-subtitle">UI-UX designer</div>
+                            <div class="card-title">...</div>
+                            <div class="card-subtitle">...</div>
                         </div>
                         <ul class="card-social">
                             <li class="card-social__item">
@@ -119,10 +119,10 @@
                     <div class="card">
                         <div class="card-info">
                             <div class="card-avatar">
-                                <img src="img/20230127_161321.jpg" alt="">
+                                <img src="" alt="">
                             </div>
-                            <div class="card-title">Hussen Ghbayen</div>
-                            <div class="card-subtitle">App Developer & Database-Management</div>
+                            <div class="card-title">...</div>
+                            <div class="card-subtitle">...</div>
                         </div>
                         <ul class="card-social">
                             <li class="card-social__item">
@@ -144,10 +144,10 @@
                     <div class="card">
                         <div class="card-info">
                             <div class="card-avatar">
-                                <img src="img/me.jpg" alt="">
+                                <img src="" alt="">
                             </div>
-                            <div class="card-title">Ibrahim Lubbad</div>
-                            <div class="card-subtitle">App Developer & Database-Management</div>
+                            <div class="card-title">....</div>
+                            <div class="card-subtitle">...</div>
                         </div>
                         <ul class="card-social">
                             <li class="card-social__item">
