--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="text-center">
                 <h1 class="animate__animated animate__fadeInLeft">App</h1>
                 <img class="animate__animated animate__fadeInDown" src="img/moc.png" alt="">
-                <h2 class="animate__animated animate__fadeInRight">Craft</h2>
+                <h2 class="animate__animated animate__fadeInRight m-3">Craft</h2>
                 <p class="animate__animated animate__backInUp pt-5"><mark>Save time and money with our expertise</mark>
                 </p>
             </div>
